--- a/src/index.html
+++ b/src/index.html
@@ -543,9 +543,25 @@
               </div>
             </div>
             <a name="contact" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-contact">
-              <div class="col shadow-lg">
-                <p class="text-white">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <div class="row section-header section-contact align-items-center text-white justify-content-center py-2">
+              Contact Us
+            </div>
+            <div class="row section-contact-info align-items-center text-white py-4">
+              <div class="col col-md-6 text-center">
+                <h5>BROOKLYN VIBES EVENTS CO.</h5>
+                <p>Brooklyn Vibes Events Co.</p>
+                <p>41 Union Square W</p>
+                <p>New York, NY 10003, USA</p>
+                <p>info@bvibes.com</p>
+                <a href="tel:+12128516271">+1 212-851-6271</a>
+              </div>
+              <div class="col col-md-6 text-center">
+                <h5>FESTIVAL OFFICE</h5>
+                <p>Brooklyn International Film Festival</p>
+                <p>334 Furman St, Brooklyn</p>
+                <p>New York, NY 11201, USA</p>
+                <p>info@boff.org.us</p>
+                <a href="tel:+12128516272">+1 212-851-6272</a>
               </div>
             </div>
             <hr>
