--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       </div><!-- /sidebar -->
 
       <div class="main-content">
-        <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow p-3 mb-5 bg-white">
+        <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow p-3 bg-white">
           <div>
             <button class="navbar-toggler sidebar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="material-icons text-secondary">menu</span>
@@ -88,98 +88,36 @@
         </nav>
 
         <main role="main">
-          <div id="main-carousel" class="carousel slide bg-dark" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-              <li data-target="#main-carousel" data-slide-to="1"></li>
-              <li data-target="#main-carousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="images/car-0.jpg" alt="..." class="carousel-img">
-                <div class="carousel-caption-container transluscent-33">
-                  <div class="carousel-caption center">
-                    <span class="display-3"><strong>Brooklyn Outdoor Film Festival</strong></span>
-                    <p class="d-none d-md-block">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</p>
+          <div class="container m-0 p-0 mw-100">
+            <div class="row section-body p-0 m-0">
+              <div class="col m-0 p-0">
+                <div id="main-carousel" class="carousel slide bg-white" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#main-carousel" data-slide-to="1"></li>
+                    <li data-target="#main-carousel" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="images/car.jpg" alt="..." class="carousel-img">
+                      <div class="carousel-caption-container">
+                        <div class="carousel-caption text-left">
+                          <h1 class="header">Brooklyn Outdoor Film Festival</h1>
+                          <p class="subtext">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/car-1.png" alt="..." class="carousel-img">
-                <div class="carousel-caption-container">
-                  <div class="carousel-caption text-left w-50 caption-limited">
-                    <span class="display-3 transluscent-66 caption-limited"><strong>Donec sed odio dui. Cras justo odio</strong></span>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/car-2.jpg" alt="..." class="carousel-img">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#main-carousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#main-carousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-          <div class="container m-0 mw-100">
-            <div class="row section-body p-2">
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Home Section</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
               </div>
             </div>
             <a name="artists" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-left section-artists">
+            <div class="row section-header section-header-left section-artists mx-0">
               <div class="col col-md-10 shadow-lg">
                 <p class="text-white">Artists</p>
               </div>
             </div>
-            <div class="row section-body">
+            <div class="row section-body m-0 mt-4 p-0">
               <div class="col infinite-scroller-container bg-dark">
                 <div class="infinite-scroller-content">
                 </div>
@@ -188,12 +126,12 @@
               </div>
             </div>
             <a name="films" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-right section-films">
+            <div class="row section-header section-header-right section-films mx-0">
               <div class="col col-md-10 shadow-lg">
                 <p class="text-white">Films</p>
               </div>
             </div>
-            <div class="row section-body section-films px-2">
+            <div class="row section-body section-films mx-0">
               <div class="col-md-4">
                 <div class="card film-item film-0">
                   <div class="card-body film-item-text-section text-white">
@@ -292,12 +230,12 @@
               </div>
             </div>
             <a name="schedule" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-left section-schedule">
+            <div class="row section-header section-header-left section-schedule mx-0">
               <div class="col col-md-10 shadow-lg">
                 <p class="text-white">Schedule</p>
               </div>
             </div>
-            <div class="row section-body p-2">
+            <div class="row section-body mx-0">
               <div class="col">
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs flex-nowrap" id="schedule-tabs" role="tablist">
@@ -457,12 +395,12 @@
               </div>
             </div>
             <a name="news" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-right section-news">
+            <div class="row section-header section-header-right section-news mx-0">
               <div class="col col-md-10 shadow-lg">
                 <p class="text-white">News & Announcements</p>
               </div>
             </div>
-            <div class="row section-body p-2">
+            <div class="row section-body mx-0">
               <div class="col-md-6">
                 <div class="news-item d-flex align-items-start flex-grow-0">
                     <img src="./images/news-0.jpg" class="news-image" alt="">
@@ -519,12 +457,12 @@
               </div>
             </div>
             <a name="about" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-left section-about">
+            <div class="row section-header section-header-left section-about mx-0">
               <div class="col col-md-10 shadow-lg">
                 <p class="text-white">About Us</p>
               </div>
             </div>
-            <div class="row section-body p-2">
+            <div class="row section-body mx-0">
               <div class="col">
                 <p>
                   The founding purpose of <strong>Brooklyn Vibes Events</strong> is to draw attention to and
@@ -543,10 +481,10 @@
               </div>
             </div>
             <a name="contact" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-contact align-items-center text-white justify-content-center py-2">
+            <div class="row section-header section-contact align-items-center text-white justify-content-center py-3 mx-0">
               Contact Us
             </div>
-            <div class="row section-contact-info align-items-center text-white py-4">
+            <div class="row section-contact-info align-items-center text-white py-5 mx-0">
               <div class="col col-md-6 text-center">
                 <h5>BROOKLYN VIBES EVENTS CO.</h5>
                 <p>Brooklyn Vibes Events Co.</p>
@@ -570,7 +508,7 @@
 
         </main><!-- /main -->
 
-        <footer class="container">
+        <footer class="container mx-0 px-2">
           <p>&copy; Brooklyn Vibes Events Co. 2017-2018</p>
         </footer>
       </div><!-- /site-container -->
