home restructure with stats bar

--- a/src/index.html
+++ b/src/index.html
@@ -89,24 +89,37 @@
 
         <main role="main">
           <div class="container m-0 p-0 mw-100">
-            <div class="row section-body p-0 m-0">
-              <div class="col m-0 p-0">
-                <div id="main-carousel" class="carousel slide bg-white" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#main-carousel" data-slide-to="1"></li>
-                    <li data-target="#main-carousel" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="images/car.jpg" alt="..." class="carousel-img">
-                      <div class="carousel-caption-container">
-                        <div class="carousel-caption text-left">
-                          <h1 class="header">Brooklyn Outdoor Film Festival</h1>
-                          <p class="subtext">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</p>
+            <div class="row section-body section-home-body p-0 m-0">
+              <div class="col d-flex flex-column m-0 p-0">
+                <div id="main-carousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#main-carousel" data-slide-to="1"></li>
+                      <li data-target="#main-carousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner h-100">
+                      <div class="carousel-item h-100 active">
+                        <div class="carousel-caption-container">
+                          <div class="carousel-caption text-left">
+                            <h1 class="header">Brooklyn Outdoor Film Festival</h1>
+                            <p class="subtext display-4">5-8 | 5 | 2019</p>
+                          </div>
                         </div>
                       </div>
                     </div>
+                  </div>
+                <div id="boff-stats" class="d-flex flex-grow-1 text-white">
+                  <div class="boff-stats-item d-flex flex-grow-1 text-left justify-content-center align-items-center">
+                    <div><p class="stats-main">5000</p><p class="stats-sub"><strong>bla bla</strong></p></div>
+                  </div>
+                  <div class="boff-stats-item d-flex flex-grow-1 text-left justify-content-center align-items-center">
+                    <div><p class="stats-main">5000</p><p class="stats-sub"><strong>bla bla</strong></p></div>
+                  </div>
+                  <div class="boff-stats-item d-flex flex-grow-1 text-left justify-content-center align-items-center">
+                    <div><p class="stats-main">5000</p><p class="stats-sub"><strong>bla bla</strong></p></div>
+                  </div>
+                  <div class="boff-stats-item d-flex flex-grow-1 text-left justify-content-center align-items-center">
+                    <div><p class="stats-main">5000</p><p class="stats-sub"><strong>bla bla</strong></p></div>
                   </div>
                 </div>
               </div>
