--- a/src/index.html
+++ b/src/index.html
@@ -23,25 +23,25 @@
         </div>
         <div class="sidebar-navitems w-100 mw-100">
           <ul class="mw-100 m-0 p-0 ">
-            <li class="mw-100 active">
+            <li class="nav-item nav-item-home mw-100">
               <a class="nav-link mw-100" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="mw-100">
+            <li class="nav-item nav-item-artists mw-100">
               <a class="nav-link mw-100" href="#artists">Artists</a>
             </li>
-            <li class="mw-100">
+            <li class="nav-item nav-item-films mw-100">
               <a class="nav-link mw-100" href="#films">Films</a>
             </li>
-            <li class="mw-100">
+            <li class="nav-item nav-item-schedule mw-100">
               <a class="nav-link mw-100" href="#schedule">Schedule</a>
             </li>
-            <li class="mw-100">
+            <li class="nav-item nav-item-news mw-100">
               <a class="nav-link mw-100" href="#news">News</a>
             </li>
-            <li class="mw-100">
+            <li class="nav-item nav-item-about mw-100">
               <a class="nav-link mw-100" href="#about">About</a>
             </li>
-            <li class="mw-100">
+            <li class="nav-item nav-item-contact mw-100">
               <a class="nav-link mw-100" href="#contact">Contact</a>
             </li>
           </ul>
@@ -52,7 +52,7 @@
       <div class="main-content">
         <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow p-3 bg-white">
           <div>
-            <button class="navbar-toggler sidebar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler sidebar-toggler" type="button">
               <span class="material-icons text-secondary">menu</span>
             </button>
             <a class="navbar-brand collapse navbar-collapse" href="#">
@@ -61,25 +61,25 @@
           </div>
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
+              <li class="nav-item nav-item-home">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-item-artists">
                 <a class="nav-link" href="#artists">Artists</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-item-films">
                 <a class="nav-link" href="#films">Films</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-item-schedule">
                 <a class="nav-link" href="#schedule">Schedule</a>
               </li>
-              <li class="mw-100">
+              <li class="nav-item nav-item-news">
                 <a class="nav-link mw-100" href="#news">News</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-item-about">
                 <a class="nav-link" href="#about">About</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-item-contact">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
