--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,11 @@
           </ul>
           <button class="btn btn-outline-success my-2 my-sm-0 w-100 mw-100">Register</button>
         </div>
+        <div class="navbar-other d-flex align-items-center justify-content-around mt-4 py-4 border-top">
+          <a href="https://www.twitter.com/" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com/" target="_blank" class="instagram"><span class="fa fa-instagram"></span></a>
+          <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+        </div>
       </div><!-- /sidebar -->
 
       <div class="main-content">
@@ -83,7 +88,12 @@
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Register</button>
+            <div class="navbar-other d-flex align-items-center justify-content-space-between">
+              <a href="https://www.twitter.com/" target="_blank" class="fa fa-twitter"></a>
+              <a href="https://www.instagram.com/" target="_blank" class="instagram"><span class="fa fa-instagram"></span></a>
+              <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+              <button class="btn-register btn btn-outline-success my-2 my-sm-0" type="submit">Register</button>
+            </div>
           </div>
         </nav>
 
