--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,73 @@
       You need to enable JavaScript to run this app.
     </noscript>
 
+    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="registerModalLabel">Pre-register</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group d-flex justify-content-between">
+                <div>
+                  <label for="first-name" class="col-form-label">First Name<span class="text-danger">*</span>:</label>
+                  <input type="text" class="form-control" id="first-name">
+                </div>
+                <div>
+                  <label for="last-name" class="col-form-label">Last Name<span class="text-danger">*</span>:</label>
+                  <input type="text" class="form-control" id="last-name">
+                </div>
+              </div>
+              <div class="form-group d-flex justify-content-between">
+                <div>
+                  <label for="email" class="col-form-label">Email<span class="text-danger">*</span>:</label>
+                  <input type="text" class="form-control" id="email">
+                </div>
+                <div>
+                  <label for="phone" class="col-form-label">Phone<span class="text-danger">*</span>:</label>
+                  <input type="text" class="form-control" id="phone">
+                </div>
+              </div>
+              <label>Dates<span class="text-danger">*</span>:</label>
+              <div class="form-group d-flex justify-content-between align-items-center">
+                <div>
+                  <input class="d-inline" type="checkbox" class="form-control" id="aug5">
+                  <label class="d-inline" for="aug5" class="col-form-label">August 5</label>
+                </div>
+                <div>
+                  <input class="d-inline" type="checkbox" class="form-control" id="aug6">
+                  <label class="d-inline" for="aug6" class="col-form-label">August 6</label>
+                </div>
+                <div>
+                  <input class="d-inline" type="checkbox" class="form-control" id="aug7">
+                  <label class="d-inline" for="aug7" class="col-form-label">August 7</label>
+                </div>
+                <div>
+                  <input class="d-inline" type="checkbox" class="form-control" id="aug8">
+                  <label class="d-inline" for="aug8" class="col-form-label">August 8</label>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-success">Register</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="fade alert alert-success" role="alert">
+      Successfully Registered!
+    </div>
+
     <div class="site-container w-100">
       <div id="sidebar" class="shadow-sm bg-white rounded hide">
         <div class="sidebar-header d-flex justify-content-between w-100 mw-100">
-          <div class="logo logo-icon"></div>
+          <a href="#"><div class="logo logo-icon"></div></a>
           <button class="sidebar-toggler border-0 bg-white mw-100">
             <a href="#"><span class="material-icons text-secondary mw-100">keyboard_arrow_left</span></a>
           </button>
@@ -44,7 +107,7 @@
               <a class="nav-link mw-100" href="#contact">Contact</a>
             </li>
           </ul>
-          <button class="btn btn-outline-success my-2 my-sm-0 w-100 mw-100">Register</button>
+          <button class="btn btn-outline-success my-2 my-sm-0 w-100 mw-100" data-toggle="modal" data-target="#registerModal">Register</button>
         </div>
         <div class="navbar-other d-flex align-items-center justify-content-around mt-4 py-4 border-top">
           <a href="https://www.twitter.com/" target="_blank" class="fa fa-twitter"></a>
@@ -59,8 +122,8 @@
             <span class="material-icons text-secondary">menu</span>
           </button>
           <div class="h-100 navbar-brand-section d-flex align-items-center" href="#">
-            <div class="navbar-brand collapse navbar-collapse logo logo-icon"></div>
-            <div class="logo logo-text p-0"></div>
+            <a href="#" class="d-block navbar-brand collapse navbar-collapse logo logo-icon"></a>
+            <a href="#" class="d-block logo logo-text p-0"></a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
@@ -90,7 +153,7 @@
               <a href="https://www.twitter.com/" target="_blank" class="fa fa-twitter"></a>
               <a href="https://www.instagram.com/" target="_blank" class="instagram"><span class="fa fa-instagram"></span></a>
               <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
-              <button class="btn-register btn btn-outline-success my-2 my-sm-0" type="submit">Register</button>
+              <button class="btn-register btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#registerModal">Register</button>
             </div>
           </div>
         </nav>
@@ -110,7 +173,7 @@
                       <div class="carousel-caption-container">
                         <div class="carousel-caption text-left">
                           <p class="header">Brooklyn Outdoor Film Festival</p>
-                          <p class="display-4">5-8 | 5 | 2019</p>
+                          <p class="display-4">05-08 | 08 | 2019</p>
                         </div>
                       </div>
                     </div>
