--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
         <div class="sidebar-header d-flex justify-content-between w-100 mw-100">
           <a href="#"><div class="logo logo-icon"></div></a>
           <button class="sidebar-toggler border-0 bg-white mw-100">
-            <a href="#"><span class="material-icons text-secondary mw-100">keyboard_arrow_left</span></a>
+            <span class="sidebar-toggler-icon material-icons text-secondary mw-100">keyboard_arrow_left</span>
           </button>
         </div>
         <div class="sidebar-navitems mt-3 border-top w-100 mw-100">
@@ -169,13 +169,17 @@
                     <li data-target="#main-carousel" data-slide-to="2"></li>
                   </ol>
                   <div class="carousel-inner h-100">
-                    <div class="carousel-item h-100 active">
-                      <div class="carousel-caption-container">
-                        <div class="carousel-caption text-left">
-                          <p class="header">Brooklyn Outdoor Film Festival</p>
-                          <p class="display-4">05-08 | 08 | 2019</p>
-                        </div>
+                    <div class="carousel-caption-container">
+                      <div class="carousel-caption text-left">
+                        <p class="header">Brooklyn Outdoor Film Festival</p>
+                        <p class="display-4">5-8/8/2019</p>
                       </div>
+                    </div>
+                    <div class="carousel-item h-100 active">
+                    </div>
+                    <div class="carousel-item h-100">
+                    </div>
+                    <div class="carousel-item h-100">
                     </div>
                   </div>
                 </div>
